# Nahda-

./: .coverage  .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.observability.yml  docker-compose.otlp.yml  docker-compose.yml  nahda.db  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: auth_routes.py  awareness_routes.py  axiomatic_routes.py  bidirectional_routes.py  explainability_routes.py  generate_routes.py  graph_routes.py  health_routes.py  infer_routes.py  manat_routes.py  morphology_routes.py  qiyas_routes.py  routes.py  rule_routes.py  semantics_routes.py  unicode_routes.py
app/core/: config.py  observability.py  rate_limiter.py  tracing.py
app/db/: session.py
app/graph/: models.py  schema.py  service.py  templates.py
app/models/: __init__.py  entities.py
app/schemas/: analysis.py  auth.py  axiomatic.py  bidirectional.py  graph.py
app/security/: __init__.py  auth.py
app/services/: __init__.py  awareness_pipeline.py  axiomatic_engine.py  bidirectional_engine.py  explainability_service.py  generate_backward_pipeline.py  inference_pipeline.py  manat_pipeline.py  morphology_pipeline.py  qiyas_pipeline.py  rule_pipeline.py  semantics_pipeline.py  unicode_pipeline.py
docs/: architecture-narrative.md  fractal-arabic-engine-spec.md  prd-technical-design-awareness-engine.md  production-secrets-profile.md  strict-rebuild-awareness-engine-spec.md
migrations/: 001_mvp_l0_l4.sql  002_semantic_core.sql  003_inference_core.sql  004_manat_tanzil_core.sql  005_explainability_observability.sql  006_awareness_layer.sql  007_graph_schema.sql  008_qiyas_core.sql  009_generation_backward.sql
nahda_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
requirements/: security-audit.txt
tests/: auth_helpers.py  test_api.py  test_axiomatic.py  test_bidirectional.py  test_config.py  test_e2e.py  test_generate.py  test_graph.py  test_qiyas.py
(+8 files in other folders)
