[project]
name = "nahda-engine"
version = "0.1.0"
description = "Nahda Arabic Fractal Engine - MVP L0-L4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "PyJWT>=2.10.0,<3.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pytest-cov>=6.1.0,<7.0.0",
  "ruff>=0.11.0,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "bandit>=1.8.0,<2.0.0",
  "pip-audit>=2.9.0,<3.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["app/core", "app/db", "app/models", "app/schemas"]
warn_unused_ignores = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
